src/parser/snapshots/antsi__parser__text__tests__empty_token.snap
---
source: src/parser/text.rs
expression: text(&mut parser)
---
Some(
    Tokens(
        [
            Styled {
                content: [],
                style: Style {
                    foreground: Some(
                        Red,
                    ),
                    background: None,
                    decoration: None,
                },
            },
        ],
    ),
)
