src/parser/snapshots/antsi__parser__text__tests__nested_token.snap
---
source: src/parser/text.rs
expression: text(&mut parser)
---
Some(
    Tokens(
        [
            Styled {
                content: [
                    Styled {
                        content: [
                            Content(
                                "inner",
                            ),
                        ],
                        style: Style {
                            foreground: None,
                            background: Some(
                                Blue,
                            ),
                            decoration: None,
                        },
                    },
                ],
                style: Style {
                    foreground: Some(
                        Red,
                    ),
                    background: None,
                    decoration: None,
                },
            },
        ],
    ),
)
