src/parser/snapshots/antsi__parser__text__tests__token_with_leading_content.snap
---
source: src/parser/text.rs
expression: text(&mut parser)
---
Some(
    Tokens(
        [
            Content(
                "leading ",
            ),
            Styled {
                content: [
                    Content(
                        "content",
                    ),
                ],
                style: Style {
                    foreground: Some(
                        Red,
                    ),
                    background: None,
                    decoration: None,
                },
            },
        ],
    ),
)
