src/parser/snapshots/antsi__parser__text__tests__token_with_multiple_decorations.snap
---
source: src/parser/text.rs
expression: text(&mut parser)
---
Some(
    Tokens(
        [
            Styled {
                content: [
                    Content(
                        "inner",
                    ),
                ],
                style: Style {
                    foreground: None,
                    background: None,
                    decoration: Some(
                        {
                            Dim,
                            Italic,
                        },
                    ),
                },
            },
        ],
    ),
)
