src/parser/snapshots/antsi__parser__text__tests__token_with_multiple_styles.snap
---
source: src/parser/text.rs
expression: text(&mut parser)
---
Some(
    Tokens(
        [
            Styled {
                content: [
                    Content(
                        "inner",
                    ),
                ],
                style: Style {
                    foreground: Some(
                        Red,
                    ),
                    background: Some(
                        Blue,
                    ),
                    decoration: Some(
                        {
                            Dim,
                            Italic,
                        },
                    ),
                },
            },
        ],
    ),
)
